@@ -1,3 +1,8 @@
+2009-07-29  vadim  <vadim@vk.crocodile.org>
+
+	* snmp.h (class SNMPCrawler): Removed obsolete parameter
+	skip_virtual - we never ignore virtual addresses.
+
 2009-07-28  vadim  <vadim@vk.crocodile.org>
 
 	* Compiler_cluster.cpp (Compiler::populateClusterElements): while
